# code_quality_workshop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.txt
.github/workflows/: CI.yml
code_quality_workshop/: main.py
